TWC3119-574 - High Priority CSS Issues (#1990)
* TWC3119-574 - Product Selector - Selected Products CSS

* TWC3119-574 - Select End Customer - Fix text wrapping, scrollbar and button alignment

* TWC3119-574 - Contract Details - Fixed Timeline alignment

* TWC3119-574 - Meet Comp - Added text wrap to Deal column

--- a/Intel.MyDeals/Client/src/app/contract/ptModals/dealEditorModals/dealEditorModals.component.css
+++ b/Intel.MyDeals/Client/src/app/contract/ptModals/dealEditorModals/dealEditorModals.component.css
@@ -1,5 +1,9 @@
 ﻿@import '../../../admin/kendo_grid.css';
 
+.mat-dialog-container {
+    overflow: initial;
+}
+
 .endCustomerRowStyle {
     padding-left: 5px;
     padding-bottom: 15px;
@@ -9,13 +13,15 @@
 .colStyle {
     text-align: center;
     padding-left: 0;
-    width: 90px !important
+    width: 90px !important;
+    white-space: nowrap;
 }
 
 .rplColStyle {
     text-align: left;
     padding-left: 3px;
-    width: 100px !important
+    width: 100px !important;
+    white-space: nowrap
 }
 
 .rightZeroPadding {
@@ -119,7 +125,7 @@
 }
 
 .buttonMinPadding {
-    padding-left: 140px !important
+    padding-left: 100px !important
 }
 
 .buttonMaxPadding {
